
==== Console stack trace hyperlink

The console stack trace hyperlinks where wrong if the namespace was separate in several files loaded from the main namespace file. Fix Issue 634 - 	Clicking links in stacktraces bring you to the file of the namespace, not the file with the code causing the crash

== Changes between Counterclockwise 0.24.1 and 0.24.2

`0.24.2` released on April 11, 2014

=== Bug fixes
==== Namespace code being loaded twice at startup

When CCW launches a REPL for a Leiningen project, it uses `lein repl :headless`. This leiningen task will, by default, try to load the namespace declared via the `[:main]`path in project.clj map (if no other namespace has been explicitly defined by the user via the `[:repl-options :init-ns] path). This magical side-effect is undesirable as default behavior, and can cause the namespace code to be loaded twice if the REPL is invoked via its source code editor. This can be problematic for certain codebases.

CCW fixes this by dissocing the :main key in the project.clj map used to start the nrepl :headless server.

=== Enhancements

==== Preference for controlling run/debug default launch mode

Since version `0.24.0`, commands indirectly loading a REPL automatically (e.g. invoking `load file in Clojure REPL` when there is no active REPL) invoke the launcher in `Debug` mode (allowing to put breakpoints in the code for instance).

This behavior can be changed globally via a new preference: `Clojure` > `General` > `Launch REPLs in Debug mode` (thus checked by default)

==== Preference for allowing Leiningen projects to be launched as regular java projects

Preference `Clojure` > `General` > `Launch Leiningen projects with Leiningen (uncheck to launch them via default java launcher)` has been added.
