@@ -1,66 +1,91 @@
 package ccw.nature;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.WorkspaceJob;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
+import org.eclipse.jdt.core.IJavaProject;
 import org.eclipse.jdt.core.JavaCore;
+import org.eclipse.jdt.core.JavaModelException;
 
 import ccw.CCWPlugin;
 import ccw.ClojureCore;
 import ccw.commands.ToggleNatureCommand;
-import ccw.util.osgi.ClojureOSGi;
-import ccw.util.osgi.RunnableWithException;
 
 final class ClojureNatureAdderWorkspaceJob extends
 		WorkspaceJob {
-	private final IProject project;
+	private final List<IProject> projects;
 
-	ClojureNatureAdderWorkspaceJob(IProject project) {
-		super("Adding Clojure Nature for project " + project.getName());
-		this.project = project;
-		// We cannot set project as the rule, since some project operations
-		// try to lock the whole workspace
-		this.setRule(project.getWorkspace().getRoot()); 
-		this.setUser(true);
+	ClojureNatureAdderWorkspaceJob(IProject[] projects) {
+		super("Checking/Adding Clojure Nature for projects " + projects);
+		
+		assert projects.length != 0;
+		this.projects = Arrays.asList(projects);
 	}
 
 	@Override
-	public IStatus runInWorkspace(IProgressMonitor monitor)
-			throws CoreException {
-		try {
-			return (IStatus) ClojureOSGi.withBundle(CCWPlugin.getDefault().getBundle(), new RunnableWithException() {
-				@Override
-				public Object run() throws Exception {
-					try {
-						if (!project.exists() || !project.isOpen())
-							return Status.CANCEL_STATUS;
-	
-						if (project.hasNature(ClojureCore.NATURE_ID)) {
-							return Status.CANCEL_STATUS;
-						}
-						
-						boolean hasClojurePackage = JavaCore.create(project).findElement(ClojurePackageElementChangeListener.CLOJURE_PACKAGE_PATH) != null;
-						
-						if (hasClojurePackage) {
-							ToggleNatureCommand.toggleNature(project, true);
-						}
-						
-					} catch (CoreException e) {
-						e.printStackTrace();
-						return CCWPlugin.createErrorStatus(
-								"Exception occured while trying to automatically " 
-						        + "add Clojure nature for project " 
+	public IStatus runInWorkspace(IProgressMonitor monitor) throws CoreException {
+		for (IProject project: projects) {
+			try {
+				if (isCandidateClojureProject(project)) {
+					ToggleNatureCommand.toggleNature(project, true);
+				}
+			} catch (Exception e) {
+				e.printStackTrace();
+				return CCWPlugin.createErrorStatus(
+						"Exception occured while trying to automatically " 
+								+ "add Clojure nature for project " 
 								+ project.getName(), 
 								e);
-					}
-					return Status.OK_STATUS;
-				}
-			});
-		} catch (Exception e) {
-			return CCWPlugin.createErrorStatus("Error adding clojure nature", e);
+			}
+		}
+		return Status.OK_STATUS;
+	}
+	
+	private boolean isCandidateClojureProject(IProject project) {
+		try {
+			boolean maybeCandidate = project.exists()
+					&& 
+					project.isOpen()
+					&&
+					!project.hasNature(ClojureCore.NATURE_ID)
+					&&
+					project.hasNature(JavaCore.NATURE_ID); // Check needed when doing a full scan
+			if (!maybeCandidate) {
+				return false;
+			} else {
+				//System.out.println("============== before creating java project");
+				IJavaProject jProject = JavaCore.create(project);
+				//System.out.println("////////////// after creating java project");
+				//System.out.println("////////////// after creating java project");
+				//System.out.println("////////////// after creating java project");
+				//System.out.println("////////////// after creating java project");
+				//System.out.println("////////////// after creating java project");
+				//System.out.println("////////////// after creating java project");
+			    boolean isCandidate = jProject.findElement(ClojurePackageElementChangeListener.CLOJURE_PACKAGE_PATH) != null;
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    //System.out.println("\\\\\\\\\\\\\\\\\\\\\\ after finding Element");
+			    return isCandidate;
+			}
+		} catch (JavaModelException e) {
+			CCWPlugin.logError("Error while  trying to determine if project " + project.getName() + " is a candidate to be converted to a clojure project", e);
+			return false;
+		} catch (CoreException e) {
+			CCWPlugin.logError("Error while  trying to determine if project " + project.getName() + " is a candidate to be converted to a clojure project", e);
+			return false;
 		}
 	}
+
 }
